syntax = "proto3";

package def.room;

option java_package = "com.game.room.proto";
option java_outer_classname = "ErrorCodeProtos";
option java_multiple_files = true;

enum ERROR_CODE {
    // 房间不存在
    ROOM_NOT_FOUND = 0;
}